# ajustes_liquidacion_proveedores_pagos_adelantados

./: .editorconfig  .gitignore  .python-version  pyproject.toml  shell.nix
ajustes_liquidaciones_proveedores_pagos_adelantados/: ajustes_liquidaciones_proveedores_pagos_adelantados.py  ajustes_liquidaciones_proveedores_pagos_adelantados_input.py  ajustes_liquidaciones_proveedores_pagos_adelantados_input_scheme.py  ajustes_liquidaciones_proveedores_pagos_adelantados_output.py  ajustes_liquidaciones_proveedores_pagos_adelantados_output_scheme.py  caso_deudas_pago_ad_actual_objetos.py
tests/: conftest.py  test_ajustest_liquidaciones_proveedores_pagos_adelantados.py
