[tool.poetry]
name = "reporte-de-liquidacion-de-operaciones"
version = "0.1.0"
description = "Reporte de Liquidacion de Operaciones"
authors = ["Cristian Angulo <cristian.angulo@globant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
